fix: update breadcrumb observer to use correct trigger element and adjust root margin for visibility

--- a/src/styles/section/block_form.scss
+++ b/src/styles/section/block_form.scss
@@ -119,6 +119,13 @@
   cursor: pointer;
   transition: all 0.3s ease;
 
+  &.has-value {
+    background-color: var(--color-grey-700);
+    background-clip: inherit;
+    background-image: none;
+    border-left: 1px solid #81E2EB;
+  }
+
   &:focus {
     border-color: var(--color-grey-400);
   }
